# Adams-File-Explorer

./: .gitignore  AGENTS.md  LICENSE  README.md  features.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
scripts/: reset-macos-default-explorer.sh  setup-macos-default-explorer.sh
skills/feature-list-manager/: SKILL.md
skills/feature-list-manager/agents/: openai.yaml
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dto.rs  main.rs
src-tauri/src/backend/: app_icons.rs  config.rs  default_folder_browser.rs  event_log.rs  file_history.rs  fs_ops.rs  image_thumbnails.rs  mod.rs  open_with.rs  tree.rs  watcher.rs
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: DefaultFolderBrowserControl.tsx  FavoritesPanel.tsx  FileIcon.tsx  OperationHistorySheet.tsx  PathBar.tsx  StatusBar.tsx  TreeView.tsx
ui/src/components/tree-dnd/: treeData.ts  useTreeDragDrop.ts
ui/src/components/ui/: sheet.tsx
ui/src/lib/: api.ts  eventLog.ts  formatters.ts  openWithAliases.ts  pathUtils.ts  types.ts
ui/src/store/: useExplorerStore.ts
