[package]
name = "adams_file_explorer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11", features = [] }
notify = "8"
trash = "5"
arboard = "3"
dirs = "6"
once_cell = "1"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
strip = true
